<resources>
    <string name="app_name">Electric_Time</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="electric_time_find_out_how_long_it_takes_to_get_there">Electric Time: Find out how long it takes to get there!</string>
    <string name="press_the_button_below_to_find_out">Press the button below to find out!</string>
    <string name="select_from_the_following">Select From the Following</string>
    <string name="select_from_the_following_options">Select from the following options</string>
    <string name="choose_an_option">Choose an option!</string>
    <string name="textview">TextView</string>
    <string name="choose_an_option_please">Choose An Option Please</string>
    <string name="Boosted_Mini_S" />
    <string name="evolve_bamboo_gtr">Evolve Bamboo GTR</string>
    <string name="extras">Extras!</string>
    <string name="boosted_mini_s">Boosted Mini S</string>
    <string name="walking">Walking</string>
    <string name="evolve_bamboo_gtr_2in1">Evolve Bamboo GTR 2in1</string>
    <string name="extra_menu">Extra Menu</string>
    <string name="razor_hovertrax_hoverboard">Razor Hovertrax Hoverboard</string>
    <string name="segway_ninebot_s_plus">Segway Ninebot S-Plus</string>
    <string name="choose_your_desired_form_of_electric_trapsort">Choose Your Desired Form of Electric TrapSort</string>
    <string name="walking_image">Walking Image</string>
    <string name="boosted_mini_s_image">Boosted Mini S Image</string>
    <string name="evolve_bamboo_gtr_image">Evolve Bamboo GTR Image</string>
    <string name="segway_n_plus_image">Segway N Plus Image</string>
    <string name="hovertrax_hoverboard_image">Hovertrax Hoverboard Image</string>
    <string name="extras_image">Extras Image</string>
    <string name="go">Go!</string>
    <string name="enter_the_distance_below">Enter the Distance Below!</string>
    <string name="distance">Distance</string>
    <string name="hello">Hello</string>
    <string name="distance_mi">Distance(Mi):</string>
    <string name="walking_time">Walking Time:</string>
    <string name="walking_time_minutes">Walking Time(Minutes):</string>
    <string name="boosted_mini_s_board_minutes">Boosted Mini S Board (Minutes):</string>
    <string name="evolve_bamboo_gtr_2in1_minutes">Evolve Bamboo GTR 2in1 (Minutes):</string>
    <string name="segway_ninebot_s_plus_minutes">Segway NineBot S-Plus (Minutes):</string>
    <string name="hovertrax_hoverboard_minutes">Hovertrax Hoverboard (Minutes):</string>
    <string name="hovertrax_hoverboard">Hovertrax Hoverboard</string>
    <string name="enter_distance_time_below">Enter Distance/Time Below!</string>
    <string name="time_minutes">Time(Minutes):</string>
</resources>